# Amazon-Sentiment-Analysis

./: .gitignore  Analyser.py  Cargo.toml  Reviews.csv
src/: main.rs
