[package]
name = "Amazon-Sentiment-Analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12.5", features = ["blocking"]}
scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
vader_sentiment = "0.1.1"
